# SLAE

./: CMakeLists.txt
solveTask2/: Test1.cpp
src/: CMakeLists.txt  progonka.cpp  test  test.txt
src/project/containers/: Norm.h  vector.cpp  vector.h
src/project/matrix/CSR/: CSR.cpp  CSR.h
src/project/matrix/ThreeDiag/: ThreeDiag.cpp  ThreeDiag.h
src/project/matrix/dense/: dense.cpp  dense.h
src/project/solver/: DescentMethod.h  Gauss-Seilder.h  Gauss-SeilderChebesev.h  GradientMethod.h  JACOBI.h  SIMCHebeshev.h  SOR.h  SSOR-Chebeshev.h  SimpleIteration.h  sweepMethod.cpp  sweepMethod.h
test/: CMakeLists.txt  test_solverForThreeDiag.cpp  test_threeDiag.cpp
